<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Yongjia Huang, Dichong Song, Mingwei Li, Donglin Han, Long Ma,CMPUT301F17T25 CMPUT301, University of Alberta, All Rights Reserved.
  ~ You may use distribut, or modify this code under terms and conditions of the ode of Student Behavior at University of Alberta
  ~ You may find a copy of the license in this project. Otherwise please contact jajayongjia@gmail.com
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.ualberta.cs.opgoaltracker.activity.HabitEventFragment">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/new_event"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:clickable="true"
        android:scaleType="center"
        app:backgroundTint="@android:color/holo_orange_light"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_add_white_24dp" />

    <ListView
        android:id="@+id/list_event"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
