<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Yongjia Huang, Dichong Song, Mingwei Li, Donglin Han, Long Ma,CMPUT301F17T25 CMPUT301, University of Alberta, All Rights Reserved.
  ~ You may use distribut, or modify this code under terms and conditions of the ode of Student Behavior at University of Alberta
  ~ You may find a copy of the license in this project. Otherwise please contact jajayongjia@gmail.com
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/habit"
            android:icon="@drawable/ic_menu_camera"
            android:title="Habit" />
        <item
            android:id="@+id/habitEvent"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Habit Event" />
        <item
            android:id="@+id/friends"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Friends" />
        <item
            android:id="@+id/social"
            android:icon="@drawable/ic_menu_share"
            android:title="Social" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="Setting" />
    </group>

</menu>
